# MovieExplorer

./: README.md  docker-compose.yml
Backend/: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  pyproject.toml
Backend/app/: main.py
Backend/app/controllers/: browse_controller.py  contributor_controller.py  title_controller.py
Backend/app/core/: api_docs.py  config.py  db.py  exceptions.py  handler.py  router.py
Backend/app/data_providers/: browse_data_provider.py  contributor_data_provider.py  title_data_provider.py
Backend/app/migration/: env.py
Backend/app/migration/versions/: 0b594e3e1bf2_create_contributor_table.py  816af93e36b5_create_title_table.py  9bd1dfb274a7_create_genre_table.py  a17ca76bd0c2_create_contributor_type_table.py  f29fb7dfe6ee_indexing.py
Backend/app/scripts/: IMDB_datacollector.py  insert_csv_to_postgres.py  movies_sample.csv  people_sample.csv  startup.sh
Backend/app/service_logic/: __init__.py  browse_service_logic.py  contributor_service_logic.py  title_service_logic.py
Backend/app/test/: conftest.py
Backend/app/test/controller_test/: browse_controller_test.py  contributor_controller_test.py  title_controller_test.py
Backend/app/test/service_logic_test/: browse_service_logic_test.py  contributor_service_logic_test.py  title_service_logic_test.py
Frontend/: Dockerfile  package-lock.json  package.json
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/api/: browseApi.ts  contributorApi.ts  titleApi.ts
Frontend/src/components/: Contributor.tsx  Movie.tsx  TopBar.tsx  Viewer.tsx
(+17 files in other folders)
