[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.129.0",
    "psycopg2-binary>=2.9.11",
    "pylint>=4.0.4",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
